--- a/css/style.scss
+++ b/css/style.scss
@@ -1153,7 +1153,7 @@
                         //color:#fff;
                         padding: .8rem 1rem;
                         outline: none;
-                        border: 1px solid #fff;
+                        border: 1px solid $white;
                         border-radius: 5px;
                         &:focus{
                             box-shadow: 0 0 3px 2px #0000001f;
@@ -1164,6 +1164,7 @@
                     #Submit2{
                         width: 100%;
                         background: #000;
+                        color: $white;
                         font-size: 1.2em;
                         text-transform: $upper;
                         border: $none;
@@ -1304,6 +1305,7 @@
     bottom: 62px;
     position: fixed;
     z-index: 3;
+    display: $none;
     a{
         // padding: 1rem 1.3rem;\
         @include flex;
