--- a/css/media.scss
+++ b/css/media.scss
@@ -1035,6 +1035,12 @@
         padding: .5rem 0 ;
         font-size: 11px;
     }
+    main .Service_wrapper .Service_heading h2 {
+        width: 100%;
+        padding: 0 0 .7rem;
+        font-size: 1.8em;
+        font-size: 1.4em;
+    }
     .BT-top a{
         width: 42px;
         height: 42px;
