--- a/css/style.scss
+++ b/css/style.scss
@@ -1209,39 +1209,44 @@
  // ---wts-app-sticky---//
 
 .wtsapp-sticky-wrp{
-    position: fixed;
-    top: 50%;
-    right: 0px;
-    z-index: 2;
-    text-align: right;
-    width: 200px;
-    height: 60px;
+    // position: fixed;
+    // top: 50%;
+    // right: 0px;
+    // z-index: 2;
+    // text-align: right;
+    // width: 200px;
+    // height: 60px;
     a{ 
-         // width:60px;
-         // height:60px; 
-         //  background-color:#25d366;
-         //   color:#FFF;
-         //  border-radius:50px;
-         //   text-align:center;
-         // font-size:30px;
-         //  box-shadow: 2px 2px 3px #999; 
+         width:60px;
+         height:60px; 
+         bottom: 20px;
+         right: 10px;
+          background-color:#25d366;
+          position: fixed;
+           color:#FFF;
+           text-align: right;
+           z-index: 99;
+          border-radius:50px;
+           text-align:center;
+         font-size:30px;
+          box-shadow: 2px 2px 3px #999; 
     }
     
-    // .my-float{
-    //     margin-top:16px;
-    // }
-    a{
-        img{
-            max-width: 100%;
-            transition: $transition;
-            transform: scale(.99);
-            &:hover{
-                filter: drop-shadow(1px 1px 3px black);
-                transition: $transition;
-                transform: scale(1);
-            }
-        }
+    .my-float{
+        margin-top:16px;
     }
+    // a{
+    //     img{
+    //         max-width: 100%;
+    //         transition: $transition;
+    //         transform: scale(.99);
+    //         &:hover{
+    //             filter: drop-shadow(1px 1px 3px black);
+    //             transition: $transition;
+    //             transform: scale(1);
+    //         }
+    //     }
+    // }
 
 }
 
