--- a/css/media.scss
+++ b/css/media.scss
@@ -16,6 +16,10 @@
         width: 215px;
         height: 215px;
     }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
+        font-size: 2.8em;  
+        font-weight: 550;
+    }
     main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
         left: -53px !important;
         top: -60px !important;
@@ -38,7 +42,22 @@
     header .Nav-wrp nav .nav-item .Unorder_wrp .drop5 {
         left: 67% !important;
     } 
-    
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content{
+        height: 761px;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child {
+        width: 100%;
+        height: 723px;
+    }
+    main .Banner_Wrapper .banner-child .owl-dots { 
+        bottom: 35px;
+        left: 47%;
+    }
+    // ---sliming---page--
+    .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
+        font-size: 4em; 
+    }
+    // ---sliming---end--here---
 }
 
 @media only screen  and(max-width:1300px){
@@ -67,6 +86,19 @@
     main header .Nav-wrp nav .nav-item {
         width: 65%;
         padding: 1rem 0;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
+        height: 662px;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child { 
+        height: 650px;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
+        font-size: 2.5em; 
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a {
+        padding: 1rem 1.9rem;
+        font-size: 1.1em; 
     }
 }
 @media only screen  and(max-width:1200px){
@@ -175,7 +207,7 @@
     }
     main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure {
          left: 39px;
-    }
+    } 
 } 
 
 @media only screen  and(max-width:1024px){ 
@@ -340,13 +372,13 @@
         margin: .5rem .5rem;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child {
-        height: 500px; 
+        height: 517px;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
-        font-size: 2.3em;
+        font-size: 2.055em; 
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
-        height: 500px; 
+        height: 517px;
         padding: 4rem 0 0;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a {
@@ -359,8 +391,8 @@
         height: 13px; 
     }
     main .Banner_Wrapper .banner-child .owl-dots {
-        bottom: 19px;
-        left: 50%;
+        bottom: 23px;
+        left: 44%;
     }
     main .Service_wrapper {
         width: 100%;
@@ -376,6 +408,51 @@
     main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
         max-width: 90%;
     }
+    // ---Sliming-----Page----//
+    .Slimming_Wrapper .Slimming-Banner {
+        height: 49vh;
+        width: 100%; 
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading {
+         padding: 2rem 0 2rem;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading h2 {
+        font-size: 1.70em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+        padding: 0 0 1.4rem;
+        font-size: 1em; 
+        line-height: 1.7;  
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h2 {
+        font-size: 1.3em; 
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h3 {
+        font-size: 1.2em; 
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right h3 {
+        font-size: 1.2em; 
+        padding: 0 0 .7rem;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right p {
+        padding: 0 0 1rem; 
+        letter-spacing: .5px;
+        line-height: 1.6;
+        word-spacing: 1px;
+    }
+    .Slimming_Wrapper .Enquery_Wrp .Enquery-content .En-cmn01 h2 {
+       font-size: 1.80em; 
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Slim-Grid-heading {
+        padding: 1rem 0;
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Slim-Grid-heading h2 {
+        font-size: 2em; 
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h4{
+        font-size: 1.1em;
+    }
+    // ---end--here-----sliming---//
 }
 
 @media  only screen  and (max-width:992px){
@@ -436,7 +513,10 @@
         height: 90%;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
-        font-size: 2.1em;
+        font-size: 1.89em;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child {
+        width: 60%;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
         font-size: 1em;
@@ -444,6 +524,68 @@
     main .Service_wrapper .Service_heading p { 
         font-size: 15px;
     } 
+    main .Banner_Wrapper .banner-child .banner-sub-child {
+        height: 500px;
+    }
+    header .Nav-wrp nav .logo a img {
+        max-width: 86%;
+    }
+    main footer { 
+        margin: 4rem 0 0; 
+    }
+    // Slimming---page----//
+    .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
+        font-size: 3em;
+    }
+    .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
+      padding: 0.5rem 4rem .5em 0;  
+      font-size: 15px; 
+      line-height: 1.7; 
+   } 
+   .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb li a {
+       font-size: 1.1em; 
+   }
+   .Slimming_Wrapper .Slimming-Banner {
+      height: 43vh;
+      width: 100%;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading {
+        padding: 1.5rem 0 1.5rem;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+        padding: 0 0 1.3rem;
+        font-size: 15px;
+        line-height: 1.7;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h2 {
+        font-size: 1.22em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h3 {
+        font-size: 1.19em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right p {
+        padding: 0 0 .6rem; 
+        line-height: 1.6;
+        word-spacing: 1px;
+        font-size: 15px;
+    }
+    .Slimming_Wrapper .Enquery_Wrp .Enquery-content .En-cmn01 h2 {
+        font-size: 1.6em;
+    }
+    .Slimming_Wrapper .Enquery_Wrp .Enquery-content .En-cmn01 h2 i.fas.fa-chevron-right {
+        vertical-align: revert;
+        font-size: 22px;
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Slim-Grid-heading {
+        padding: 0.2rem 0 .7rem;
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Slim-Grid-heading h2 {
+        font-size: 1.8em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-left figure img {
+        max-width: 90%; 
+    }
+    // --end---here----
 }
 
 @media only screen and(max-width:767px){
@@ -527,8 +669,8 @@
         padding: .6rem 1rem;
         margin: .5rem .5rem;
     }
-    main .Banner_Wrapper .banner-child .banner-sub-child {
-        height: 440px;
+    main .Banner_Wrapper .banner-child .banner-sub-child { 
+        height: 400px//392px; 
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
         font-size: 15px;
@@ -539,9 +681,32 @@
         padding: .7rem .9rem;
         margin: .5rem 0 0;
     }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
+        font-size: 1.5em;
+    }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a i.fas.fa-chevron-right {
         font-size: 12px;
         padding: 0 0 0 .3rem;
+    }
+    main .Banner_Wrapper .banner-child .owl-prev {
+        left: 10px;
+    }
+    main .Banner_Wrapper .banner-child .owl-next, main .Banner_Wrapper .banner-child .owl-prev, main .Banner_Wrapper .banner-child .owl-prev {
+        right: 23px;
+        font-size: 4em !important;
+        top: 50%;
+    }
+    main .Banner_Wrapper .banner-child .owl-dots .owl-dot {
+        width: 11px;
+        height: 12px;
+    }
+    main .Banner_Wrapper .banner-child .owl-dots {
+        bottom: 14px;
+        left: 44%;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
+        height: 440px;
+        padding: 3rem 0 0;
     }
     main .About_Wrapper::before {
         width: 65%;
@@ -566,6 +731,47 @@
     main footer .mid-logo figure img {
         max-width: 23%;
     }
+
+    // ---Sliminnng---page--//
+    .Slimming_Wrapper .Slimming-Banner .Banner_Content{
+        padding: 1rem 0 0;
+    }
+    .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
+        font-size: 2em;
+        text-shadow: 1px 2px 3px #00000057;
+    }
+    .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb li a {
+        font-size: 1em;
+    }
+    .Slimming_Wrapper .Slimming-Banner {
+        height: 39vh;
+        width: 100%;
+    } 
+    .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading h2 {
+        font-size: 1.50em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h2 {
+        font-size: 1.12em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h3 {
+        font-size: 1.08em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h4 {
+        font-size: 1.08em;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-left figure img {
+        max-width: 100%; 
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right p {
+        letter-spacing: .5px;
+        line-height: 1.7; 
+        font-size: 15px;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right h3 {
+        font-size: 1.190em;
+        padding: 0 0 .7rem;
+    }
+    // ---end---here-----//
 }
 
 @media only screen and (max-width: 576px){
@@ -758,8 +964,8 @@
         padding: .7rem 0 .2rem;
     }
     main .Banner_Wrapper .banner-child .owl-dots {
-        bottom: 19px;
-        left: 43%;
+        bottom: 17px;
+        left: 39%;
     }
     main .Testimonial_Wrapper .Testimonial_heading h2 {
         font-size: 1.7em;
@@ -791,9 +997,48 @@
     .sub-drop02 ul.weight_wrp.hvr01 li {
         text-align: left;
     }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
+        font-size: 1.3em;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a {
+        padding: .7rem .8rem;
+        margin: .5rem 0 0;
+        font-size: 14px;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
+        font-size: 15px; 
+        padding: .5rem 0 .5rem;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child {
+        width: 57%;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child {
+        height: 334px;
+    } 
+    header .Nav-wrp {
+        width: 100%; 
+        // position: relative; 
+    }
+    main .Banner_Wrapper .banner-child .owl-dots .owl-dot {
+        width: 10px;
+        height: 10px;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
+        height: 407px;
+    }
 }
 
 @media only screen and (max-width:480px){
+    header .Nav-wrp {
+        width: 100%; 
+        position: relative; 
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
+        height: 221px;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child {
+        height: 256px;//240px;
+    }
     header .top-social-bar .child-wrp .L1 p{  
         justify-content: center;
         &:first-child{
@@ -803,8 +1048,21 @@
             width: 100%;
         }
     }  
+    main .Banner_Wrapper .banner-child .owl-next, main .Banner_Wrapper .banner-child .owl-prev, main .Banner_Wrapper .banner-child .owl-prev, main .Banner_Wrapper .banner-child .owl-prev {
+        right: 13px;
+        font-size: 3em !important;
+        top: 36%;
+    }
+    main .Service_wrapper .Service_heading h2 {
+        width: 100%; 
+        font-size: 1.5em;
+    }
     header .top-social-bar .child-wrp .L1{
         justify-content: center!important;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
+        font-size: 1.1em;
+        font-weight: 570;
     }
     header .Nav-wrp nav .logo {
         width: 50%;
@@ -816,26 +1074,46 @@
     .myHeader {
         top: 79px;
     }
+    main .Service_wrapper .Service_content .Grid-item1 {  
+        background-position: revert;
+        height: 400px;
+    }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child {
-        width: 100%;
-        text-align: center;
+        //width: 100%;
+        // text-align: center;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
+        font-size: 13px;
     }
     main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-        left: -56px;
-        top: -214px;
+        left: -62px;
+        top: -114px;
     }
     main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
         right: -58px;
         bottom: -215px;
     }
+    main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
+        width: 150px;
+        height: 150px;
+    }
+    main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::after {
+        width: 150px;
+        height: 150px;
+    } 
+    main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+        right: -64px;
+        bottom: -112px;
+    } 
     main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-        left: -60px !important;
+        left: -62px !important;
         top: -62px !important;
     }
     main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-        right: -62px !important;
-        bottom: -63px !important;
-    }
+        right: -64px !important;
+        bottom: -64px !important;
+    } 
+    
     main .About_Wrapper .About_Content .Abt_cmn01 h2 {
         font-size: 1.5em;
     }
@@ -908,7 +1186,7 @@
     } 
     main footer .footer_content .Ft04 li p:first-child{
         justify-content: center;
-    }
+    } 
 }
 
 @media only screen and(max-width:375px){
@@ -916,14 +1194,47 @@
         width: 60%;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
-        font-size: 1.7em;
+        font-size: 1.1em;
+        font-weight: 550;
     }  
     main .Banner_Wrapper .banner-child .banner-sub-child {
-    height: 400px;  
+        height: 249px;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
-        height: 381px;
-        padding: 4rem 0 0;
+        height: 211px;
+        padding: 1rem 0 0;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a {
+        padding: .7rem .8rem;
+        margin: .1rem 0 0;
+        font-size: 13px;
+    } 
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
+        font-size: 13px;
+        padding: .5rem 0 .8rem;
+        line-height: 1.6;
+    } 
+    main .Banner_Wrapper .banner-child .owl-next, main .Banner_Wrapper .banner-child .owl-prev{
+        top: 38%;
+        right: 10px;
+        font-size: 3em !important;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
+        font-size: 13px;
+        padding: .5rem 0 .8rem;
+        line-height: 1.6;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a i.fas.fa-chevron-right {
+        font-size: 11px;
+        padding: 0 0 0 .1rem;
+    }
+    main .Banner_Wrapper .banner-child .owl-dots .owl-dot {
+        width: 10px;
+        height: 10px;
+    }
+    main .Banner_Wrapper .banner-child .owl-dots {
+        bottom: 14px;
+        left: 35%;
     }
     // header .top-social-bar .child-wrp .L1 p:last-child {
     //     width: 50%;
@@ -1051,5 +1362,8 @@
     .BT-top {
         right: 18px;
         bottom: 46px;
+    }
+    main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child {
+        width: 70%;
     }
 }
